fix: edit z-index content

--- a/src/styles/scss/layout/_content.scss
+++ b/src/styles/scss/layout/_content.scss
@@ -16,7 +16,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    .image {
+      z-index: 2;
+    }
     .text {
+      z-index: 2;
       width: 600px;
       text-align: center;
       h1, h2 {
